sorting layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,10 @@ body {
     display: block;
 }
 
-h1, h2 {
+h1, #hero-text h2 {
     font-family: oswald, sans-serif;
     text-transform: uppercase;
-    letter-spacing: 3px;
+    letter-spacing: 2px;
     color: #33b5e5;
 }
 
@@ -46,7 +46,7 @@ h1, h2 {
 }
 
 #menu, #logo {
-    line-height: 75px;
+    line-height: 51px;
 }
 
 #menu li {
@@ -65,7 +65,7 @@ h1, h2 {
 }
 
 .active {
-    border-bottom: 1px solid #3a3a3a;
+    border-bottom: 2px solid #3a3a3a;
 }
 
 /* hero image and hero text */
@@ -115,21 +115,20 @@ h1, h2 {
 
 #left-treatment {
     padding-top: 30px;
-    width: 33%;
+    width: 33.3%;
     float: left;
 }
 
 #right-treatment {
     padding-top: 30px;
-    width: 33%;
+    width: 33.3%;
     float: right;
 }
 
 #center-treatment {
     padding-top: 30px;
-    width: 33%;
+    width: 33.3%;
     margin: 0 auto;
-    background-color: silver;
     border-top-right-radius: 25px;
 }
 
@@ -145,6 +144,7 @@ hr {
     line-height: 20px;
     clear: both;
     margin-bottom: 25px;
+    text-align: justify;
 }
 
 .right-treatment-content {
@@ -153,14 +153,7 @@ hr {
     line-height: 20px;
     clear: both;
     margin-bottom: 25px;
-}
-
-.right-treatment-content h2 {
-    text-align: right;
-}
-
-.right-treatment-content p {
-    text-align: right;
+    text-align: justify;
 }
 
 .center-treatment-content {
@@ -169,14 +162,7 @@ hr {
     line-height: 20px;
     padding: 0 0 10px 20px;
     margin-bottom: 25px;
-}
-
-.center-treatment-content h2 {
-    text-align: center;
-}
-
-.center-treatment-content p {
-    text-align: center;
+    text-align: justify;
 }
 
 #treatment-title {
@@ -437,7 +423,7 @@ button {
 .icon {
     font-size: 700%;
     text-align: center;
-    color: #3a3a3a;
+    color: #33b5e5;
 }
 
 .know-us h2 {
@@ -457,7 +443,7 @@ button {
 #location, 
 .about-us {
     width: 65%;
-    height: 600px;
+    height: 800px;
     margin: 0 auto;
 }
 
@@ -471,11 +457,12 @@ button {
 
 #treatment-title, 
 #location-area {
-    padding: 30px;
+    padding: 30px 0;
     margin: 0;
+    color: #33b5e5;
 }
 
-#left-treatment, #right-treatment, 
+#left-treatment, #right-treatment,
 #left-location, #right-location,
 #left-know-us, #right-know-us, #center-know-us {
     width: 100%;
@@ -483,11 +470,41 @@ button {
     padding: 0;
 }
 
+
+.right-location-content h4,
+.left-location-content h4 {
+    text-align: center;
+}
+
+.right-location-content p,
+.left-location-content p {
+    text-align: justify;
+}
+
+.right-treatment-content h2,
+.left-treatment-content h2 {
+    text-align: center;
+}
+
+.center-treatment-content h2 {
+    text-align: center;
+}
+
+
+
+
+#center-image {
+    object-fit: contain;
+}
+
+
 #center-treatment, #center-content {
     clear: both;
     width: 100%;
     float: left;
+    padding: 0;
 }
+
 
 #hero-text {
     left: 25px;
@@ -513,7 +530,7 @@ hr {
          left: 25px;
      }
 
-     #treatment, #location {
+     #treatment, #location .about-us {
          width: 90%;
          height: 600px;
          margin: 0 auto;
@@ -546,7 +563,6 @@ hr {
         width: 33.3%;
         margin: 1rem; 
         text-align: center;
-        background-color: #0099cc;
         padding-top: 1rem;
         margin: 0 auto;
     }
